--- a/ecommerce-api/ECommerceAPI/appsettings.json
+++ b/ecommerce-api/ECommerceAPI/appsettings.json
@@ -3,14 +3,11 @@
     "DefaultConnection": "Host=ep-square-water-ahbqosp7-pooler.c-3.us-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_z0P1WoNkUhmf;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Cors": {
-    "Origins": [ "https://ECommerce-fe.vercel.app", "http://localhost:5173" ]
+    "Origins": [
+      "https://assignment1-prn232-fe.onrender.com",
+      "http://localhost:5173"
+    ]
   },
   "EnableSwagger": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*"
 }
